Crash when sculpting on geometry and dyntopo enabled #79597

Closed
opened 2020-08-06 18:32:22 +02:00 by Bebin Chandra · 21 comments

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 15:29, hash: 97c56b7628
Worked: version 2.83.4

Short description of error
blender crash when enabling dyntopo on geometry and start sculpting

Exact steps for others to reproduce the error

  1. create a simple cube
  2. switch to sculpt mode
  3. enable dyntopo
  4. start sculpt on the geometry with mirror modifier
    Blender Crashes
**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 15:29, hash: `97c56b7628` Worked: version 2.83.4 **Short description of error** blender crash when enabling dyntopo on geometry and start sculpting **Exact steps for others to reproduce the error** 1. create a simple cube 2. switch to sculpt mode 3. enable dyntopo 4. start sculpt on the geometry with mirror modifier Blender Crashes
Author

Added subscriber: @Bebin

Added subscriber: @Bebin

#79845 was marked as duplicate of this issue

#79845 was marked as duplicate of this issue

#79824 was marked as duplicate of this issue

#79824 was marked as duplicate of this issue

#79774 was marked as duplicate of this issue

#79774 was marked as duplicate of this issue

#79722 was marked as duplicate of this issue

#79722 was marked as duplicate of this issue

#79644 was marked as duplicate of this issue

#79644 was marked as duplicate of this issue
Bebin Chandra changed title from Crash when enabling dynatopo on geometry with mirror modifier to Crash when sculpting on geometry with mirror modifier and enabling dyntopo 2020-08-06 18:34:36 +02:00

Added subscribers: @PabloDobarro, @rjg

Added subscribers: @PabloDobarro, @rjg

Can confirm. It seems this was caused by 5f51438185 @pablodp606.

_BLI_assert_abort() Line 51	C
BM_vert_at_index(BMesh * bm, const int index) Line 102	C
SCULPT_vertex_co_get(SculptSession * ss, int index) Line 145	C
SCULPT_active_vertex_co_get(SculptSession * ss) Line 250	C
SCULPT_cursor_geometry_info_update(bContext * C, SculptCursorGeometryInfo * out, const float * mouse, bool use_sampled_normal) Line 7011	C
paint_cursor_sculpt_session_update_and_init(PaintCursorContext * pcontext) Line 1362	C
paint_cursor_draw_3D_view_brush_cursor(PaintCursorContext * pcontext) Line 1736	C
paint_draw_cursor(bContext * C, int x, int y, void * UNUSED_unused) Line 1857	C
wm_paintcursor_draw(bContext * C, ScrArea * area, ARegion * region) Line 124	C
wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 780	C
wm_draw_window(bContext * C, wmWindow * win) Line 830	C
wm_draw_update(bContext * C) Line 1030	C
WM_main(bContext * C) Line 482	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 548	C
Can confirm. It seems this was caused by 5f5143818591 @pablodp606. ``` _BLI_assert_abort() Line 51 C BM_vert_at_index(BMesh * bm, const int index) Line 102 C SCULPT_vertex_co_get(SculptSession * ss, int index) Line 145 C SCULPT_active_vertex_co_get(SculptSession * ss) Line 250 C SCULPT_cursor_geometry_info_update(bContext * C, SculptCursorGeometryInfo * out, const float * mouse, bool use_sampled_normal) Line 7011 C paint_cursor_sculpt_session_update_and_init(PaintCursorContext * pcontext) Line 1362 C paint_cursor_draw_3D_view_brush_cursor(PaintCursorContext * pcontext) Line 1736 C paint_draw_cursor(bContext * C, int x, int y, void * UNUSED_unused) Line 1857 C wm_paintcursor_draw(bContext * C, ScrArea * area, ARegion * region) Line 124 C wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 780 C wm_draw_window(bContext * C, wmWindow * win) Line 830 C wm_draw_update(bContext * C) Line 1030 C WM_main(bContext * C) Line 482 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 548 C ```

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser changed title from Crash when sculpting on geometry with mirror modifier and enabling dyntopo to Crash when sculpting on geometry and dyntopo enabled 2020-08-10 10:33:41 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I have changed the report description, because it also crashes without a mirror modifier.

I have changed the report description, because it also crashes without a mirror modifier.
Member

Added subscribers: @toki46-3, @yulia_maliauka

Added subscribers: @toki46-3, @yulia_maliauka
Member

Added subscribers: @YAFU, @mano-wii

Added subscribers: @YAFU, @mano-wii

Added subscriber: @TomG

Added subscriber: @TomG

Still crashes on
2.91.0 Alpha , hash: 6fe609d4c3 , commit date: 2020-08-13 13:24

Still crashes on 2.91.0 Alpha , hash: `6fe609d4c3` , commit date: 2020-08-13 13:24

@TomG The patch D8489 is under review.

@TomG The patch [D8489](https://archive.blender.org/developer/D8489) is under review.

Added subscriber: @ThomasJohann

Added subscriber: @ThomasJohann

This issue was referenced by 9c241eae48

This issue was referenced by 9c241eae487f29f6eb3e996fb2d39c82ceeb0b75
Member

Added subscribers: @Sun_Xiao_Fang, @Diogo_Valadares

Added subscribers: @Sun_Xiao_Fang, @Diogo_Valadares
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-08-17 17:35:34 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79597
No description provided.